{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 137,
  "lineage": "17a1b535-67d4-20dc-d567-56857ed8cfc8",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/my-alb/43068d716e851f69",
            "arn_suffix": "app/my-alb/43068d716e851f69",
            "dns_name": "my-alb-611921558.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/my-alb/43068d716e851f69",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-06df474d8bef0d2ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d983e3a1caffb5d1"
              },
              {
                "subnet_id": "subnet-0f3acbb086f43afe5"
              }
            ],
            "subnets": [
              "subnet-0d983e3a1caffb5d1",
              "subnet-0f3acbb086f43afe5"
            ],
            "tags": {
              "Environment": "Test",
              "Name": "my-alb"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0ec4e3d4796f279c8",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.alb-sg.aws_security_group.this",
            "module.alb-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/my-alb/43068d716e851f69/fcf05c178d6dbd61",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-2021092212392748010000000b/544d4290805b6ca4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/my-alb/43068d716e851f69/fcf05c178d6dbd61",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/my-alb/43068d716e851f69",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-sg.aws_security_group.this",
            "module.alb-sg.aws_security_group.this_name_prefix",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-2021092212392748010000000b/544d4290805b6ca4",
            "arn_suffix": "targetgroup/pref-2021092212392748010000000b/544d4290805b6ca4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-2021092212392748010000000b/544d4290805b6ca4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-2021092212392748010000000b",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "dependencies": [
            "module.alb-sg.aws_security_group.this",
            "module.alb-sg.aws_security_group.this_name_prefix",
            "module.alb.aws_lb.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-06df474d8bef0d2ba",
            "description": "Security group for bastion host",
            "egress": [],
            "id": "sg-06df474d8bef0d2ba",
            "ingress": [],
            "name": "sg_for_alb-20210922123703875100000003",
            "name_prefix": "sg_for_alb-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_alb"
            },
            "tags_all": {
              "Name": "sg_for_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3632357296",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06df474d8bef0d2ba",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-sg.aws_security_group.this",
            "module.alb-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-520061834",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06df474d8bef0d2ba",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-sg.aws_security_group.this",
            "module.alb-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-335470166",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06df474d8bef0d2ba",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-sg.aws_security_group.this",
            "module.alb-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0722a3b7aa3690daf",
            "description": "Security group for bastion host",
            "egress": [],
            "id": "sg-0722a3b7aa3690daf",
            "ingress": [],
            "name": "sg_for_bastion-20210922123703882900000004",
            "name_prefix": "sg_for_bastion-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_bastion"
            },
            "tags_all": {
              "Name": "sg_for_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2977055262",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0722a3b7aa3690daf",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion-sg.aws_security_group.this",
            "module.bastion-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2689294726",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0722a3b7aa3690daf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion-sg.aws_security_group.this",
            "module.bastion-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.db-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0a7bfc1710b56d7a3",
            "description": "Security group for database",
            "egress": [],
            "id": "sg-0a7bfc1710b56d7a3",
            "ingress": [],
            "name": "sg_for_database-20210922123705790500000005",
            "name_prefix": "sg_for_database-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_database"
            },
            "tags_all": {
              "Name": "sg_for_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-218793924",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a7bfc1710b56d7a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db-sg.aws_security_group.this",
            "module.db-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.db-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "MySQL/Aurora",
            "from_port": 3306,
            "id": "sgrule-108688042",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a7bfc1710b56d7a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db-sg.aws_security_group.this",
            "module.db-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3979026653",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a7bfc1710b56d7a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db-sg.aws_security_group.this",
            "module.db-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:internet-gateway/igw-04fdeedeeae7f07e6",
            "id": "igw-04fdeedeeae7f07e6",
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app"
            },
            "tags_all": {
              "Name": "vpc-app"
            },
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04fdeedeeae7f07e6",
            "id": "r-rtb-09829cf1fb85f36a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09829cf1fb85f36a0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-045a9c7a82444f1f6",
            "id": "rtb-045a9c7a82444f1f6",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-app-private-us-east-2a"
            },
            "tags_all": {
              "Name": "vpc-app-private-us-east-2a"
            },
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-09e5668139befcc0e",
            "id": "rtb-09e5668139befcc0e",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-app-private-us-east-2b"
            },
            "tags_all": {
              "Name": "vpc-app-private-us-east-2b"
            },
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-09829cf1fb85f36a0",
            "id": "rtb-09829cf1fb85f36a0",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-app-public"
            },
            "tags_all": {
              "Name": "vpc-app-public"
            },
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce40fab41e81a79c",
            "route_table_id": "rtb-045a9c7a82444f1f6",
            "subnet_id": "subnet-06624585f6af96e78"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d45e12ee25695e9",
            "route_table_id": "rtb-09e5668139befcc0e",
            "subnet_id": "subnet-0bbded5f7402d74e1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0365b6c143910ec69",
            "route_table_id": "rtb-09829cf1fb85f36a0",
            "subnet_id": "subnet-0d983e3a1caffb5d1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e4c4c16f5667554",
            "route_table_id": "rtb-09829cf1fb85f36a0",
            "subnet_id": "subnet-0f3acbb086f43afe5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-06624585f6af96e78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-06624585f6af96e78",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app-private-us-east-2a"
            },
            "tags_all": {
              "Name": "vpc-app-private-us-east-2a"
            },
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0bbded5f7402d74e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0bbded5f7402d74e1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app-private-us-east-2b"
            },
            "tags_all": {
              "Name": "vpc-app-private-us-east-2b"
            },
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0d983e3a1caffb5d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.101.0/24",
            "id": "subnet-0d983e3a1caffb5d1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app-public-us-east-2a"
            },
            "tags_all": {
              "Name": "vpc-app-public-us-east-2a"
            },
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0f3acbb086f43afe5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.102.0/24",
            "id": "subnet-0f3acbb086f43afe5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app-public-us-east-2b"
            },
            "tags_all": {
              "Name": "vpc-app-public-us-east-2b"
            },
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:vpc/vpc-0ec4e3d4796f279c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-015ea8fcc6df96261",
            "default_route_table_id": "rtb-0a35c6a4f9c2547a4",
            "default_security_group_id": "sg-0046a846baf0ea45a",
            "dhcp_options_id": "dopt-5513733e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ec4e3d4796f279c8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a35c6a4f9c2547a4",
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app"
            },
            "tags_all": {
              "Name": "vpc-app"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-008a479c51fc4dee3",
            "description": "Security group for web servers",
            "egress": [],
            "id": "sg-008a479c51fc4dee3",
            "ingress": [],
            "name": "sg_for_apache-20210922123705795700000006",
            "name_prefix": "sg_for_apache-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_apache"
            },
            "tags_all": {
              "Name": "sg_for_apache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec4e3d4796f279c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2035704496",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-008a479c51fc4dee3",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web-sg.aws_security_group.this",
            "module.web-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2388795993",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008a479c51fc4dee3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web-sg.aws_security_group.this",
            "module.web-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3282266604",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008a479c51fc4dee3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web-sg.aws_security_group.this",
            "module.web-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-398541916",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-008a479c51fc4dee3",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web-sg.aws_security_group.this",
            "module.web-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "User-service ports",
            "from_port": 22,
            "id": "sgrule-3660239191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008a479c51fc4dee3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web-sg.aws_security_group.this",
            "module.web-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}